add index seo tag info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Polymer</title>
+  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo"" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Polymer" />
+  <meta property="og:description" content="Welcome to Polymer!" />
+  <meta property="og:image" content="https://jesswu1551.github.io/escape-seo/assets/images/og.png" />
 </head>
 
 <body>
