--- a/course_js.html
+++ b/course_js.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo" />
+  <meta property="og:title" content="Javascript | Polymer" />
+  <meta property="og:description" content="Getting Started with JavaScript" />
+  <meta property="og:image" content="https://jesswu1551.github.io/escape-seo/assets/images/og.png" />
+  <meta property="og:type" content="website" />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
