--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo" />
+  <meta property="og:title" content="Polymer" />
+  <meta property="og:description" content="Welcome to Polymer!" />
+  <meta property="og:image" content="https://jesswu1551.github.io/escape-seo/assets/images/og.png" />
+  <meta property="og:type" content="website" />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Polymer</title>
-  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo"" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Polymer" />
-  <meta property="og:description" content="Welcome to Polymer!" />
-  <meta property="og:image" content="https://jesswu1551.github.io/escape-seo/assets/images/og.png" />
 </head>
 
 <body>
