--- a/course_js.html
+++ b/course_js.html
@@ -15,6 +15,43 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Javascript | Polymer</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Javascript | Polymer",
+      "description": "Getting Started with JavaScript",
+      "brand": {
+        "@type": "Brand",
+        "name": "Polymer"
+      },
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4.5",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Polymer"
+        }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "reviewCount": "13245"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://jesswu1551.github.io/escape-seo/course_js.html",
+        "priceCurrency": "TWD",
+        "price": "2600.00",
+        "itemCondition": "https://schema.org/UsedCondition",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+  </script>
 </head>
 
 <body>
