update json-ld info and og url

--- a/course_js.html
+++ b/course_js.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo" />
+  <meta property="og:url" content="https://jesswu1551.github.io/escape-seo/course_js.html" />
   <meta property="og:title" content="Javascript | Polymer" />
   <meta property="og:description" content="Getting Started with JavaScript" />
   <meta property="og:image" content="https://jesswu1551.github.io/escape-seo/assets/images/og.png" />
@@ -20,7 +20,14 @@
       "@context": "https://schema.org/",
       "@type": "Product",
       "name": "Javascript | Polymer",
+      "image": [
+        "https://example.com/photos/1x1/photo.jpg",
+        "https://example.com/photos/4x3/photo.jpg",
+        "https://example.com/photos/16x9/photo.jpg"
+      ],
       "description": "Getting Started with JavaScript",
+      "sku": "0446310786",
+      "mpn": "925872",
       "brand": {
         "@type": "Brand",
         "name": "Polymer"
@@ -47,6 +54,7 @@
         "url": "https://jesswu1551.github.io/escape-seo/course_js.html",
         "priceCurrency": "TWD",
         "price": "2600.00",
+        "priceValidUntil": "2022-12-31",
         "itemCondition": "https://schema.org/UsedCondition",
         "availability": "https://schema.org/InStock"
       }
