compress and replace images

--- a/courses.html
+++ b/courses.html
@@ -156,7 +156,7 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/js.png" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/js.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="./course_js.html"
@@ -185,7 +185,7 @@
               </div>
               <div class="card-footer">
                 <img
-                  src="./assets/images/teacher1.jpg"
+                  src="./assets/images/webp/teacher1.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
@@ -194,7 +194,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/html.png" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/html.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="./course_html.html"
@@ -223,7 +223,7 @@
               </div>
               <div class="card-footer ">
                 <img
-                  src="./assets/images/teacher1.jpg"
+                  src="./assets/images/webp/teacher1.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
@@ -232,7 +232,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/node.jpeg" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/node.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="#" class="stretched-link h5 text-decoration-none text-dark">Getting Started with
@@ -260,7 +260,7 @@
               </div>
               <div class="card-footer ">
                 <img
-                  src="./assets/images/teacher1.jpg"
+                  src="./assets/images/webp/teacher1.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
@@ -269,7 +269,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/bootstrap5.png" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/bootstrap5.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="#" class="stretched-link h5 text-decoration-none text-dark">Getting Started with
@@ -297,7 +297,7 @@
               </div>
               <div class="card-footer ">
                 <img
-                  src="./assets/images/teacher2.jpg"
+                  src="./assets/images/webp/teacher2.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
@@ -306,7 +306,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/figma.png" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/figma.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="#" class="stretched-link h5 text-decoration-none text-dark">Getting Started with
@@ -334,7 +334,7 @@
               </div>
               <div class="card-footer ">
                 <img
-                  src="./assets/images/teacher2.jpg"
+                  src="./assets/images/webp/teacher2.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
@@ -343,7 +343,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card mb-3">
-              <img src="./assets/images/vue.png" class="card-img-top" style="height:150px;object-fit:cover">
+              <img src="./assets/images/webp/vue.webp" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
                   <a href="#" class="stretched-link h5 text-decoration-none text-dark">Getting Started with
@@ -371,7 +371,7 @@
               </div>
               <div class="card-footer ">
                 <img
-                  src="./assets/images/teacher2.jpg"
+                  src="./assets/images/webp/teacher2.webp"
                   class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
