update images tag in html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img class="img-fluid"
-          src="./assets/images/webp/banner.webp">
+        <picture>
+          <source type="image/webp" srcset="./assets/images/webp/banner.webp">
+          <source type="image/jpeg" srcset="./assets/images/banner.jpg">
+          <img class="img-fluid" src="./assets/images/banner.jpg">
+        </picture>
       </div>
     </div>
     <div class="row mb-5">
@@ -76,9 +79,11 @@
       <div class="row">
         <div class="col-md-4 mb-4 mb-md-0">
           <div class="card border-0">
-            <img
-              src="./assets/images/webp/form.webp"
-              class="card-img-top">
+            <picture>
+              <source type="image/webp" srcset="./assets/images/webp/form.webp">
+              <source type="image/jpeg" srcset="./assets/images/form.jpg">
+              <img class="card-img-top" src="./assets/images/form.jpg">
+            </picture>
             <div class="card-body p-5">
               <form>
                 <div class="form-floating mb-3">
@@ -116,9 +121,11 @@
           <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="./assets/images/webp/comment1.webp"
-                  class="img-fluid rounded-start w-100" style="height:200px;object-fit:cover;">
+                <picture>
+                  <source type="image/webp" srcset="./assets/images/webp/comment1.webp">
+                  <source type="image/jpeg" srcset="./assets/images/comment1.jpg">
+                  <img class="img-fluid rounded-start w-100" src="./assets/images/comment1.jpg" style="height:200px;object-fit:cover;">
+                </picture>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -136,9 +143,11 @@
           <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="./assets/images/webp/comment2.webp"
-                  class="img-fluid rounded-start w-100" style="height:200px;object-fit:cover;">
+                <picture>
+                  <source type="image/webp" srcset="./assets/images/webp/comment2.webp">
+                  <source type="image/jpeg" srcset="./assets/images/comment2.jpg">
+                  <img class="img-fluid rounded-start w-100" src="./assets/images/comment2.jpg" style="height:200px;object-fit:cover;">
+                </picture>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -155,9 +164,11 @@
           <div class="card mb-3">
             <div class="row g-0">
               <div class="col-md-4">
-                <img
-                  src="./assets/images/webp/comment3.webp"
-                  class="img-fluid rounded-start w-100" style="height:200px; object-fit:cover;">
+                <picture>
+                  <source type="image/webp" srcset="./assets/images/webp/comment3.webp">
+                  <source type="image/jpeg" srcset="./assets/images/comment3.jpg">
+                  <img class="img-fluid rounded-start w-100" src="./assets/images/comment3.jpg" style="height:200px;object-fit:cover;">
+                </picture>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
